--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "cypress": "^3.4.1"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "cypress": "^4.1.0",
     "cypress-cucumber-preprocessor": "^2.0.1",
     "cypress-file-upload": "^3.4.0",
     "cypress-multi-reporters": "^1.2.3",
